feat(server-express): find TaskLists API (#28)
* Add integration test

* Add path to Open API spec

* Enhance repository

* Enhance domain service

* Implement middleware
